# SubgraphMatching

./: Automorphism.cpp  Automorphism.h  BuildTable.cpp  BuildTable.h  CMakeLists.txt  Enumeration.cpp  Enumeration.h  FileHandler.cpp  FileHandler.h  FilterVertices.cpp  FilterVertices.h  GeneratingFilterPlan.cpp  GeneratingFilterPlan.h  ParallelEnumeration.cpp  ParallelEnumeration.h  PruningConstraints.cpp  PruningConstraints.h  README.md  StudyPerformance.cpp  TriangleEnumeration.cpp  TriangleEnumeration.h  backtracking.cpp  backtracking.h  basic_data_graph.graph  basic_query_graph.graph  commandparser.cpp  commandparser.h  data_graph_4.graph  filters.cpp  graph.cpp  graph.h  matchingcommand.cpp  matchingcommand.h  run.sh  run_3_truss.sh  run_4n6e.sh  run_directed_graph.sh  run_filter.sh  run_kronecker_large.sh  run_kronecker_small.sh  (+4 more)
analysis/: amazon_3_truss_si.txt  amazon_3_truss_si_serial.txt  amazon_4n6e_si_serial.txt  amazon_q3_si_io_serial.txt  amazon_q3_si_limit_serial.txt  amazon_q3_si_tp_serial.txt  amazon_q3n3e_si_order_dlb_5.txt  amazon_q4_si_order_serial.txt  amazon_q4_si_tp_serial.txt  amazon_q4n6e_si_order_dlb_5.txt  amazon_q5n6e_si_order_dlb_5.txt  analysis_amazon_query_3.graph  analysis_amazon_query_4.graph  analysis_dblp_query_3.graph  analysis_dblp_query_4.graph  analysis_test.graph  dblp_3_truss_si.txt  dblp_3_truss_si_serial.txt  dblp_4n6e_si_serial.txt  dblp_q3_si_io_serial.txt  dblp_q3_si_limit_serial.txt  dblp_q3_si_tp_serial.txt  dblp_q3n3e_si_order_dlb_5.txt  dblp_q4_si_order_serial.txt  dblp_q4_si_tp_serial.txt  dblp_q4n6e_si_order_dlb_5.txt  (+96 more)
(+49 files in other folders)
